bug/JENKINS-46009-safari-pipeline-alignment * Fix pipeline graph alignment issue in Safari

--- a/blueocean-dashboard/src/main/less/pipeline-run-graph.less
+++ b/blueocean-dashboard/src/main/less/pipeline-run-graph.less
@@ -1,6 +1,7 @@
 .PipelineGraph-container {
     display: flex;
     flex-direction: column;
+    align-items: center;
     overflow: auto;
     margin-bottom: 16px;
     max-height: ~"calc(70vh - 120px)"; // Leave room for header (120px) and log (30vh)
